--- a/HasuraAlgorandAuthWebHook/HasuraAlgorandAuthWebHook.csproj
+++ b/HasuraAlgorandAuthWebHook/HasuraAlgorandAuthWebHook.csproj
@@ -9,11 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AlgorandAuthentication" Version="1.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AlgorandAuthenticationDotNet\AlgorandAuthentication.csproj" />
   </ItemGroup>
 
   <ItemGroup>
