--- a/HasuraAlgorandAuthWebHook/appsettings.json
+++ b/HasuraAlgorandAuthWebHook/appsettings.json
@@ -13,5 +13,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Roles": [
+    {
+      "Address": "TESTNTTTJDHIF5PJZUBTTDYYSKLCLM6KXCTWIOOTZJX5HO7263DPPMM2SU",
+      "Role": "Admin"
+    }
+  ]
 }
